--- a/exploration/plot-image-gt.ipynb
+++ b/exploration/plot-image-gt.ipynb
@@ -175,7 +175,7 @@
     "f, axs = plt.subplots(2, 1, figsize=(20,10))\n",
     "f.tight_layout()\n",
     "\n",
-    "# non road label\n",
+    "# background label\n",
     "axs[0].imshow(gt_image[:,:,0], cmap='gray')\n",
     "axs[0].axis('off')\n",
     "# road label\n",
